# pycicdtest

./: pyproject.toml
.github/workflows/: build-and-deploy.yml
src/cicdtest/: main.py
